--- a/makefile.individual_out
+++ b/makefile.individual_out
@@ -9,7 +9,7 @@ CC			?= gcc
 CXX			?= g++
 CFLAGS		?= -std=c99   -Wall -pedantic-errors -march=native $(CFLAGS_EXTRA)
 CXXFLAGS	?= -std=c++0x -Wall -pedantic-errors -march=native $(CXXFLAGS_EXTRA)
-LIBS		?= #-lm -lGL -lGLU -lglut
+LIBS		?= -lm #-lGL -lGLU -lglut
 DEFINES 	?= #-D_XOPEN_SOURCE 700
 
 #fortran
@@ -26,8 +26,8 @@ OUT_EXT 	?= #.elf
 #basename without extension of file to run
 RUN ?= main
 
-ASSEMBLER_BASENAME 	?= c.c
-ASSEMBLE_EXT 		?= .c
+ASSEMBLER_NOEXT		?= $(IN_DIR)$(RUN)
+
 DEBUG_DEFINE 		?=
 DEBUG_FLAGS  		?=
 PROFILE_DEFINE 		?= #-DDEBUG
@@ -58,9 +58,23 @@ $(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.cpp
 $(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.f
 	$(FF) $(OPTIMIZE_FLAGS) $(FFLAGS) -o "$@" "$<" $(FFLIBS)
 
-assembler: mkdir $(IN_DIR)$(ASSEMBLER_BASENAME)
+#make assembly to stdout
+asm: mkdir $(IN_DIR)$(ASSEMBLER_BASENAME)
 	$(eval OPTIMIZE_FLAGS := -O0)
-	$(CC) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(DEBUG_DEFINE) $(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(CFLAGS) -S "$(IN_DIR)$(ASSEMBLE_BASENAME)" -o "$(OUT_DIR)$(ASSEMBLE_BASENAME).s"
+	for EXT in $(IN_EXTS); do \
+		if [ -f "$(ASSEMBLER_NOEXT)$$EXT" ]; then \
+			case "$$EXT" in \
+				.c)\
+					$(CC) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(DEBUG_DEFINE) $(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(CFLAGS) -S "$(ASSEMBLER_NOEXT)$$EXT" -o - \
+					;;\
+				.cpp)\
+					;;\
+				.f)\
+					;;\
+			esac;\
+			break;\
+		fi;\
+	done
 
 clean:
 	rm -rf "$(OUT_DIR)"
