--- a/c/makefile_params
+++ b/c/makefile_params
@@ -1,5 +1,5 @@
-CFLAGS_EXTRA	:= -Wno-unused-variable -Wno-unused-but-set-variable
-CXXFLAGS_EXTRA	:= -Wno-unused-variable -Wno-unused-but-set-variable -pthread
+CFLAGS_EXTRA	:= -Wno-sequence-point -Wno-unused-variable -Wno-unused-but-set-variable
+CXXFLAGS_EXTRA	:= -Wno-sequence-point -Wno-unused-variable -Wno-unused-but-set-variable -pthread
 FFLAGS_EXTRA 	:= -Wno-unused-variable -Wno-unused-but-set-variable
 RUN				:= c
 PHONY			:= install-deps-ubuntu
