friend added, struct inside struct cycle impossible added to C, ostream methods and manipulators added

--- a/makefile.individual_out
+++ b/makefile.individual_out
@@ -32,7 +32,7 @@ DEBUG_DEFINE 		?=
 DEBUG_FLAGS  		?=
 PROFILE_DEFINE 		?= #-DDEBUG
 PROFILE_FLAGS  		?= #
-OPTIMIZE_FLAGS		?= -O3
+OPTIMIZE_FLAGS		?= #-O3
 
 #extra phony targets
 PHONY				?=
