--- a/kde/makefile
+++ b/kde/makefile
@@ -1,12 +1,22 @@
+BUILD_DIR := build/
+
+run: all
+	cd "$(BUILD_DIR)" && ./kdecheat
+
 all:
-	mkdir -p build
-	cd build &&\
+	mkdir -p "$(BUILD_DIR)"
+	cd "$(BUILD_DIR)" &&\
 	cmake ../ &&\
-	make &&\
-	./kdecheat
-	# Could also install and run with:
-	#make install
-	#kdecheat
+	make
 
 clean:
-	rm -rf build
+	rm -rf "$(BUILD_DIR)"
+
+# It is necessary to install in order for certain features to apply,
+# for example ui.rc files.
+install: all
+	cd "$(BUILD_DIR)" && sudo make install
+	kdecheat
+
+uninstall: all
+	cd "$(BUILD_DIR)" && sudo make uninstall
