--- a/kde/makefile
+++ b/kde/makefile
@@ -1,7 +1,5 @@
 BUILD_DIR := build/
-
-run: all
-	cd "$(BUILD_DIR)" && ./kdecheat
+TARGET    := kdecheat
 
 all:
 	mkdir -p "$(BUILD_DIR)"
@@ -9,14 +7,21 @@ all:
 	cmake ../ &&\
 	make
 
+run: all
+	cd "$(BUILD_DIR)" && ./$(TARGET)
+
 clean:
 	rm -rf "$(BUILD_DIR)"
 
 # It is necessary to install in order for certain features to apply,
 # for example ui.rc files.
 install: all
-	cd "$(BUILD_DIR)" && sudo make install
-	kdecheat
+	cd "$(BUILD_DIR)" && make install
+
+# This does not require install because install is usually run as sudo,
+# and it may be a bad idea to run the program as sudo.
+install-run:
+	$(TARGET)
 
 uninstall: all
-	cd "$(BUILD_DIR)" && sudo make uninstall
+	cd "$(BUILD_DIR)" && make uninstall
