qt designer hello world widget added to app

--- a/kde/CMakeLists.txt
+++ b/kde/CMakeLists.txt
@@ -2,7 +2,7 @@ project(kdecheat)
 find_package(KDE4 REQUIRED)
 include_directories(${KDE4_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR})
 set(kdecheat_SRCS main.cpp)
-kde4_add_kcfg_files(kdecheat_SRCS kdecheat_settings.kcfgc)
+kde4_add_kcfg_files(kdecheat_SRCS settings.kcfgc)
 kde4_add_executable(kdecheat ${kdecheat_SRCS})
 target_link_libraries(kdecheat ${KDE4_KDEUI_LIBS})
 install(FILES kdecheatui.rc DESTINATION  ${DATA_INSTALL_DIR}/kdecheat)
