--- a/kde/CMakeLists.txt
+++ b/kde/CMakeLists.txt
@@ -2,6 +2,7 @@ project(kdecheat)
 find_package(KDE4 REQUIRED)
 include_directories(${KDE4_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR})
 set(kdecheat_SRCS main.cpp)
+kde4_add_ui_files(kdecheat_SRCS general.ui)
 kde4_add_kcfg_files(kdecheat_SRCS settings.kcfgc)
 kde4_add_executable(kdecheat ${kdecheat_SRCS})
 target_link_libraries(kdecheat ${KDE4_KDEUI_LIBS})
