--- a/makefile.single_out
+++ b/makefile.single_out
@@ -8,7 +8,7 @@ CFLGS 					?= -Wall -std=c++0x -pedantic-errors
 DEBUG_DEFINE 			?=
 DEBUG_FLAGS 			?=
 DEFINES 				?= #-DPOSIX 							#for -DDEBUG and -DPROFILE, used dedicated DEFINES
-IN_EXTS 				?= .c .cc .cpp
+IN_EXTS 				?= .c .cpp
 IN_DIR 					?= ./
 INCLUDE_DIRS 			?= #-L/usr/include/GL
 LIBS 					?= #-lglut -lGLU -lGL
@@ -27,7 +27,7 @@ AUX_NODIR	:= $(filter %$(OBJ_EXT), $(foreach IN_EXT, $(IN_EXTS), $(patsubst %$(I
 AUXS		:= $(addprefix $(AUX_DIR),$(AUXS_NODIR))
 
 OUT_BASENAME:= $(OUT_BASENAME_NOEXT)$(OUT_EXT)
-OUT					:= $(OUT_DIR)$(OUT_BASENAME)
+OUT			:= $(OUT_DIR)$(OUT_BASENAME)
 
 .PHONY: all mkdir clean assembler debug set_debug_flags profile set_profile_flags help ubuntu_install_deps
 
