--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,1 @@
-# Output files: bins/.so/.a
-_out/
-
-# Intermediate compilation files: .o
-_tmp/
-
-# Cmake style generated files
-build/
-
-# Compiled Object files
-*.slo
-*.lo
-*.out
-*.o
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-
-# Assembly code
-*.s
-
-# Temporary files
-*.tmp
+boilerplate/.gitignore
