--- a/opengl/texture_fps/Makefile
+++ b/opengl/texture_fps/Makefile
@@ -1,18 +1,11 @@
+# TODO factor out this makefile. Problem: must copy media on the out dir.
+
 CC := g++
 LIBS := -lGL -lGLU -lglut -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video -lopencv_features2d -lopencv_calib3d -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_flann -lm
-#compile command
-
 IN_EXT=.cpp
-#extension of input files
-
 IN_DIR=./
-#directory from which input files come. slash termianted.
-
 OUT_DIR=_out/
-#dir where output files such as .pdf will be put. slash terminated.
-
 OUT_EXT=
-#extension of output
 
 INS=$(wildcard $(IN_DIR)*$(IN_EXT))
 INS_NODIR=$(notdir $(INS))
@@ -36,6 +29,5 @@ clean:
 	rm -rf $(OUT_DIR) $(SAUX_DIR)
 
 install-ubuntu:
-	sudo apt-get install g++
-	sudo apt-get install freeglut
+	sudo apt-get install freeglut-dev
 	sudo apt-get install libopencv-dev
