--- a/Makefile_targets
+++ b/Makefile_targets
@@ -1,8 +1,7 @@
-install-ubuntu:
-	sudo apt-get update
-	sudo apt-get install aptitude
-	sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+deps:
 	sudo aptitude update
+	sudo aptitude install build-essential
+	sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
 	# C
 	sudo aptitude install -y gcc-4.8
 	sudo aptitude install -y gcc-4.8-doc
@@ -12,3 +11,5 @@ install-ubuntu:
 	sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50
 	# Fortran
 	sudo aptitude install -y gfortran
+
+	sudo aptitude install -y g++
