--- a/plplot/Makefile_targets
+++ b/plplot/Makefile_targets
@@ -1,4 +1,4 @@
-install-ubuntu:
+deps:
 	sudo aptitude update
 	sudo aptitude install -y libplplot-dev
 	sudo aptitude install -y plplot11-driver-xwin
